--- a/Experiencia2/petsy/templates/somos.html
+++ b/Experiencia2/petsy/templates/somos.html
@@ -7,13 +7,12 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
-    {%load static%}
-    <link rel="stylesheet" href="./css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;1,100;1,500&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./css/style.css">
+    {%load static%}
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
     
     <title>Quienes Somos</title>
   </head>
@@ -23,7 +22,7 @@
 
  <nav class="navbar navbar-expand-lg navbar-light p-4 shadow p-3 bg-white rounded" style="background-color: #a7daff !important;"  id="navbar">
         <div class="container">
-          <img src="./img/Petsy Logo.png" alt="" width="50" height="44" class="d-inline-block align-text-top">
+          <img src="{% static './img/Petsy Logo.png' %}" alt="" width="50" height="44" class="d-inline-block align-text-top">
           <!--<a class="navbar-brand" href="#">Navbar</a> -->
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -31,23 +30,23 @@
           <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav ms-auto">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
+                <a class="nav-link active" aria-current="page" href="% url 'index' %}">Inicio</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="registracion.html">Registro</a>
+                <a class="nav-link" href="{% url 'registracion' %}">Registro</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="galeria.html">Productos</a>
+                <a class="nav-link" href="{% url 'galeria' %}">Productos</a>
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                   Más información  
                 </a>  <!-- agregar tildes -->
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                  <li><a class="dropdown-item" href="somos.html">¿Quiénes somos?</a></li>
-                  <li><a class="dropdown-item" href="Contacto.html">✉️Contacto</a></li>
-                  <li><a class="dropdown-item" href="calculadora.html">Calculadora</a></li>
-                  <li><a class="dropdown-item" href="Feriados Api .html">Divisas</a></li>
+                  <li><a class="dropdown-item" href="{% url 'somos' %}">¿Quiénes somos?</a></li>
+                  <li><a class="dropdown-item" href="{% url 'Contacto' %}">✉️Contacto</a></li>
+                  <li><a class="dropdown-item" href="{% url 'calculadora' %}">Calculadora</a></li>
+                  <li><a class="dropdown-item" href="{% url 'Feriados' %}">Divisas</a></li>
                 </ul>
               </li>
             </ul>
