--- a/Experiencia2/petsy/templates/crearAccesorios.html
+++ b/Experiencia2/petsy/templates/crearAccesorios.html
@@ -14,17 +14,67 @@
     {%load static%}
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
 
+    <style>
+        body{
+            font-family: Arial;
+        }
 
-    
+        .error-control{
+            border: 1px solid red;
+        }
+
+        label.error{
+            color: red;
+            width: 200px;
+            font-size: 0.8em;
+            margin-top: -5px;
+            margin-bottom: 10px;
+        }
+    </style>
+
+<script>
+
+    $(function() 
+    {
+        $("#formulario").validate({
+              rules: {
+                  email: {
+                    idProducto: "required",
+                    clase: "required",
+                    stock: "required",
+                    categoria: "required",
+              }   
+              
+          }, //rules
+      messages: {
+          idProducto: {
+              required: 'Ingrese id del producto ',
+          },
+          clase: {
+              required: 'Ingrese clase del producto',
+          },
+          stock:{
+              required: 'Ingrese stock del producto',
+          },
+          categoria:{
+              required: 'Seleccione una categoria',
+             },
+        }//messages
+     }); //$('#mi-formulario').validate
+    }); //function
+
+</script>
+
+
+
     <title>Petsy</title>
+
   </head>
   <body>
-    
-  
-  
-    <!-- N A V B A R -->
 
-    <nav class="navbar navbar-expand-lg navbar-light p-4 shadow p-3 bg-white rounded" style="background-color: #a7daff !important;"  id="navbar">
+       <!-- N A V B A R -->
+
+       <nav class="navbar navbar-expand-lg navbar-light p-4 shadow p-3 bg-white rounded" style="background-color: #a7daff !important;"  id="navbar">
         <div class="container">
           <img src="{% static './img/Petsy Logo.png' %}" alt="" width="50" height="44" class="d-inline-block align-text-top">
           <!--<a class="navbar-brand" href="#">Navbar</a> -->
@@ -59,40 +109,46 @@
           </div>
         </div>
       </nav>
-    
-    
-    
+
+
+
     <div class="container">
-        <h1>Mostrando Accesorios</h1>
+        <h2>Creando Accesorios</h2>
 
-        <table class="table">
-            <thead>
-                <tr>
-                    <th>IDProducto</th>
-                    <th>Clase</th>
-                    <th>Stock</th>
-                </tr>
-            </thead>
-            <tbody>
-            {% for ac in accesorios %}
+        <div class="row">
+            <form action="#" method="POST" id="formulario">
+                {% csrf_token %}
+                <div class="form-group">
+                    {{accesorio_form.idProducto.label}}
+                    {{accesorio_form.idProducto}}
+                </div>
+                <div class="form-group">
+                    {{accesorio_form.clase.label}}
+                    {{accesorio_form.clase}}
+                </div>
+                <div class="form-group">
+                    {{accesorio_form.stock.label}}
+                    {{accesorio_form.stock}}
+                </div>
+                <div class="form-group">
+                    {{accesorio_form.categoria.label}}
+                    {{accesorio_form.categoria}}
+                </div>
 
-                <tr>
-                    <td>{{ ac.idProducto }}</td>
-                    <td>{{ ac.clase }}</td>
-                    <td>{{ ac.stock }}</td>
-                    <td><a href="{% url 'form_modaccesorio' ac.idProducto %}">Modificar</a></td>
-                </tr>
-            {% endfor %}
-            </tbody>
-        </table>
+                <br><br>
+                <input type="submit" class="btn btn-success" value="Enviar">
+                <input type="submit" class="btn btn-danger" value="Limpiar">
+
+            </form>
+        </div>
+
     </div>
 
 
 
+    <!-- F O O T E R -->
 
-      <!-- F O O T E R -->
-
-      <footer class="w-100 d-flex align-items justify-content-center flex-wrap">
+    <footer class="w-100 d-flex align-items justify-content-center flex-wrap">
         <p class="fs-5 px-3 pt-3">Petsy. (by Lucas Acevedo, Cesar Negrete) &copy; Copyright 2022 Todos los derechos
           reservados</p>
           <div id="iconos">
@@ -103,9 +159,11 @@
           </div>
  
       </footer>
+ 
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
-</body>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+
+  </body>
+
   </html>
-
