--- a/Experiencia2/petsy/templates/index.html
+++ b/Experiencia2/petsy/templates/index.html
@@ -50,6 +50,7 @@
                   <li><a class="dropdown-item" href="{% url 'calculadora' %}">Calculadora</a></li>
                   <li><a class="dropdown-item" href="{% url 'Feriados' %}">Divisas</a></li>
                   <li><a href="{% url 'mostrar' %}" class="dropdown-item">Mostrar stock Accesorios</a></li>
+                  <li><a href="{% url 'form_accesorio' %}" class="dropdown-item">Crear Accesorios</a></li>
                 </ul>
               </li>
             </ul>
