--- a/Experiencia2/petsy/templates/somos.html
+++ b/Experiencia2/petsy/templates/somos.html
@@ -18,41 +18,45 @@
   </head>
   <body>
 
+
     <!-- N A V B A R -->
 
- <nav class="navbar navbar-expand-lg navbar-light p-4 shadow p-3 bg-white rounded" style="background-color: #a7daff !important;"  id="navbar">
-        <div class="container">
-          <img src="{% static './img/Petsy Logo.png' %}" alt="" width="50" height="44" class="d-inline-block align-text-top">
-          <!--<a class="navbar-brand" href="#">Navbar</a> -->
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNavDropdown">
-            <ul class="navbar-nav ms-auto">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="% url 'index' %}">Inicio</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="{% url 'registracion' %}">Registro</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="{% url 'galeria' %}">Productos</a>
-              </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Más información  
-                </a>  <!-- agregar tildes -->
-                <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                  <li><a class="dropdown-item" href="{% url 'somos' %}">¿Quiénes somos?</a></li>
-                  <li><a class="dropdown-item" href="{% url 'Contacto' %}">✉️Contacto</a></li>
-                  <li><a class="dropdown-item" href="{% url 'calculadora' %}">Calculadora</a></li>
-                  <li><a class="dropdown-item" href="{% url 'Feriados' %}">Divisas</a></li>
-                </ul>
-              </li>
-            </ul>
-          </div>
+    <nav class="navbar navbar-expand-lg navbar-light p-4 shadow p-3 bg-white rounded" style="background-color: #a7daff !important;"  id="navbar">
+      <div class="container">
+        <img src="{% static './img/Petsy Logo.png' %}" alt="" width="50" height="44" class="d-inline-block align-text-top">
+        <!--<a class="navbar-brand" href="#">Navbar</a> -->
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+          <ul class="navbar-nav ms-auto">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="{% url 'index' %}">Inicio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'registracion' %}">Registro</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'galeria' %}">Productos</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                Más información  
+              </a>  <!-- agregar tildes -->
+              <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                <li><a class="dropdown-item" href="{% url 'somos' %}">¿Quiénes somos?</a></li>
+                <li><a class="dropdown-item" href="{% url 'Contacto' %}">✉️Contacto</a></li>
+                <li><a class="dropdown-item" href="{% url 'calculadora' %}">Calculadora</a></li>
+                <li><a class="dropdown-item" href="{% url 'Feriados' %}">Divisas</a></li>
+                <li><a href="{% url 'mostrar' %}" class="dropdown-item">Mostrar stock Accesorios</a></li>
+                <li><a href="{% url 'form_accesorio' %}" class="dropdown-item">Crear Accesorios</a></li>
+              </ul>
+            </li>
+          </ul>
         </div>
-      </nav>
+      </div>
+    </nav>
+
        <section class="w-50 mx-auto text-center pt-3 mt-5 ">
         <h1 class="display-1" >Quienes Somos</h1>
         <br>
@@ -69,7 +73,7 @@
       <br>
       <br>
       <br>
-      <img src="./img/pexels-photo-10624310.jpeg" class="img-fluid" alt="...">
+      <img src="{% static './img/pexels-photo-10624310.jpeg' %}" class="img-fluid" alt="...">
 
 
       <br>
