--- a/Experiencia2/petsy/templates/form_modaccesorio.html
+++ b/Experiencia2/petsy/templates/form_modaccesorio.html
@@ -117,7 +117,7 @@
       <div class="container">
         <h2>Modificando Accesorios</h2><br>
 
-        <form method="POST" action="#" id="formulario">
+        <form method="POST" action="#" id="formulario" enctype="multipart/form-data">
             {% csrf_token %}
             <div class="form-group">
                 {{form.idProducto.label}}
@@ -138,10 +138,19 @@
                 {{form.categoria.label}}
                 {{form.categoria}}
             </div>
+            <div class="form-group">
+              {{form.imagen.label}}
+              {{form.imagen}}
+          </div>
             <br><br>
             <input type="submit" class="btn btn-primary" value="Enviar">
             <a href="{% url 'mostrar' %}" class="btn btn-success">Mostrar Accesorios</a>
-        </form>
+       
+          </form>
+
+
+          <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+
     </div>
 
 
