--- a/Experiencia2/petsy/templates/Crearcliente.html
+++ b/Experiencia2/petsy/templates/Crearcliente.html
@@ -15,16 +15,64 @@
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
 
 
-    
+    <style>
+        body{
+            font-family: Arial;
+        }
+
+        .error-control{
+            border: 1px solid red;
+        }
+
+        label.error{
+            color: red;
+            width: 200px;
+            font-size: 0.8em;
+            margin-top: -5px;
+            margin-bottom: 10px;
+        }
+    </style>
+
+<script>
+
+$(function() 
+    {
+      $("#formulario").validate({
+           rules: {
+                  email: {
+                        Rut_Cliente: "required",
+                        Nombre: "required",
+                        Transaciones: "required",
+                  }   
+                  
+              }, //rules
+          messages: {
+            Rut_Cliente: {
+                  required: 'Ingrese Rut Cliente',
+              },
+              Nombre: {
+                  required: 'Ingrese Nombe del cliente',
+              },
+              Transaciones:{
+                  required: 'Ingrese Numero de Transaciones',
+              },
+          }//messages
+      }); //$('#mi-formulario').validate
+  }); //function
+
+
+</script>
+
+
+
     <title>Petsy</title>
+
   </head>
   <body>
-    
-  
-  
-    <!-- N A V B A R -->
 
-    <nav class="navbar navbar-expand-lg navbar-light p-4 shadow p-3 bg-white rounded" style="background-color: #a7daff !important;"  id="navbar">
+       <!-- N A V B A R -->
+
+       <nav class="navbar navbar-expand-lg navbar-light p-4 shadow p-3 bg-white rounded" style="background-color: #a7daff !important;"  id="navbar">
         <div class="container">
           <a href="{% url 'index' %}"><img src="{% static './img/Petsy Logo.png' %}" alt="" width="50" height="44" class="d-inline-block align-text-top"></a>
           <!--<a class="navbar-brand" href="#">Navbar</a> -->
@@ -68,42 +116,47 @@
           </div>
         </div>
       </nav>
-    
-    
-    
-    <div class="container">
-        <h1>Mostrando Accesorios</h1>
 
-        <table class="table">
-            <thead>
-                <tr>
-                    <th>IDProducto</th>
-                    <th>Clase</th>
-                    <th>Stock</th>
-                </tr>
-            </thead>
-            <tbody>
-            {% for ac in accesorios %}
+      <div class="container">
+        <h2>Ingresando Info Cliente</h2>
 
-                <tr>
-                    <td>{{ ac.idProducto }}</td>
-                    <td>{{ ac.clase }}</td>
-                    <td>{{ ac.stock }}</td>
-                    <td>{{ ac.imagen }}</td>
-                    <td><a href="{% url 'form_modaccesorio' ac.idProducto %}">Modificar</a></td>
-                    <td><a href="{% url 'form_del_accesorio' ac.idProducto %}" class="btn btn-danger">Eliminar</a></td>
-                </tr>
-            {% endfor %}
-            </tbody>
-        </table>
+        {% if user.is_authenticated  %}
+        <div class="row">
+            <form method="POST" action="#" id="formulario" enctype="multipart/form-data" >
+                {% csrf_token %}
+                <div class="form-group">
+                    {{cliente_form.Rut_Cliente.label}}
+                    {{cliente_form.Rut_Cliente}}
+                </div>
+
+                <div class="form-group">
+                    {{cliente_form.Nombre.label}}
+                    {{cliente_form.Nombre}}
+                </div>
+
+                <div class="form-group">
+                    {{cliente_form.Transaciones.label}}
+                    {{cliente_form.Transaciones}}
+                </div>
+
+                <br><br>
+                <input type="submit" class="btn btn-primary" value="Enviar">
+                <input type="reset" class="btn btn-danger" value="Limpiar">
+            </form>
+            {% else %}
+            <br><br><br>
+            <h3 style="color: red; text-align: center;">No tiene permisos para Registar Clientes</h3>
+            {%endif%}
+        </div>
     </div>
 
 
 
 
-      <!-- F O O T E R -->
 
-      <footer class="w-100 d-flex align-items justify-content-center flex-wrap">
+    <!-- F O O T E R -->
+
+    <footer class="w-100 d-flex align-items justify-content-center flex-wrap">
         <p class="fs-5 px-3 pt-3">Petsy. (by Lucas Acevedo, Cesar Negrete) &copy; Copyright 2022 Todos los derechos
           reservados</p>
           <div id="iconos">
@@ -114,9 +167,11 @@
           </div>
  
       </footer>
+ 
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
-</body>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+
+  </body>
+
   </html>
-
