--- a/Experiencia2/petsy/templates/index.html
+++ b/Experiencia2/petsy/templates/index.html
@@ -13,6 +13,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;1,100;1,500&display=swap" rel="stylesheet">
     {%load static%}
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    <script src="{% static 'js/reloj.js'%}"></script>
 
 
     
@@ -24,7 +25,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-light p-4 shadow p-3 bg-white rounded" style="background-color: #a7daff !important;"  id="navbar">
         <div class="container">
-          <img src="{% static './img/Petsy Logo.png' %}" alt="" width="50" height="44" class="d-inline-block align-text-top">
+          <a href="{% url 'index' %}"><img src="{% static './img/Petsy Logo.png' %}" alt="" width="50" height="44" class="d-inline-block align-text-top"></a>
           <!--<a class="navbar-brand" href="#">Navbar</a> -->
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -38,6 +39,9 @@
                 <a class="nav-link" href="{% url 'registracion' %}">Registro</a>
               </li>
               <li class="nav-item">
+                <a class="nav-link" href="{% url 'login' %}">Iniciar Sesion</a>
+              </li>
+              <li class="nav-item">
                 <a class="nav-link" href="{% url 'galeria' %}">Productos</a>
               </li>
               <li class="nav-item dropdown">
@@ -49,11 +53,20 @@
                   <li><a class="dropdown-item" href="{% url 'Contacto' %}">✉️Contacto</a></li>
                   <li><a class="dropdown-item" href="{% url 'calculadora' %}">Calculadora</a></li>
                   <li><a class="dropdown-item" href="{% url 'Feriados' %}">Divisas</a></li>
+                  {% if user.is_authenticated  %}
                   <li><a href="{% url 'mostrar' %}" class="dropdown-item">Mostrar stock Accesorios</a></li>
                   <li><a href="{% url 'form_accesorio' %}" class="dropdown-item">Crear Accesorios</a></li>
+                  <li><a href="{% url 'MostrarCliente' %}" class="dropdown-item">Mostrar Info Clientes</a></li>
+                  <li><a href="{% url 'CrearCliente' %}" class="dropdown-item">Ingresar Cliente</a></li>
+                                  
+                
                 </ul>
               </li>
+            <li class="nav-item">
+              <a href="{%  url 'logout' %}" class="nav-link">Cerrar Sesión</a>
+            </li>
             </ul>
+                {%endif%}
           </div>
         </div>
       </nav>
@@ -113,6 +126,24 @@
         </div>      
       </div>
 
+
+      
+      <div class="container-fluid">
+        <div class="col-md-12 mx-auto text-center">
+          <h2>Sigue nuestras ofertas!</h2>
+        </div>
+        <div class="col-md-12 mx-auto text-center" style="height: 0.5em; ;">
+          <span id="hours">00</span>
+          <span>:</span>
+          <span id="minutes">00</span>
+          <span>:</span>
+          <span id="seconds">00</span>
+          <span id="session">AM</span>
+        </div>
+          
+      </div>
+      
+
      <!--
       <footer class="bg-dark text-white mt-5">
         <div class="container">
@@ -168,6 +199,6 @@
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-
+    
   </body>
 </html>
