--- a/Experiencia2/petsy/templates/registration/login.html
+++ b/Experiencia2/petsy/templates/registration/login.html
@@ -1,10 +1,14 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Login</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+    <link rel="stylesheet" href="cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.17.0/jquery.validate.js"></script>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -15,16 +19,16 @@
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
 
 
-    
-    <title>Petsy</title>
-  </head>
-  <body>
-    
-  
-  
-    <!-- N A V B A R -->
 
-    <nav class="navbar navbar-expand-lg navbar-light p-4 shadow p-3 bg-white rounded" style="background-color: #a7daff !important;"  id="navbar">
+
+
+</head>
+<body>
+
+
+       <!-- N A V B A R -->
+
+       <nav class="navbar navbar-expand-lg navbar-light p-4 shadow p-3 bg-white rounded" style="background-color: #a7daff !important;"  id="navbar">
         <div class="container">
           <a href="{% url 'index' %}"><img src="{% static './img/Petsy Logo.png' %}" alt="" width="50" height="44" class="d-inline-block align-text-top"></a>
           <!--<a class="navbar-brand" href="#">Navbar</a> -->
@@ -51,72 +55,50 @@
                   <li><a class="dropdown-item" href="{% url 'Contacto' %}">✉️Contacto</a></li>
                   <li><a class="dropdown-item" href="{% url 'calculadora' %}">Calculadora</a></li>
                   <li><a class="dropdown-item" href="{% url 'Feriados' %}">Divisas</a></li>
-                  {% if user.is_authenticated  %}
                   <li><a href="{% url 'mostrar' %}" class="dropdown-item">Mostrar stock Accesorios</a></li>
                   <li><a href="{% url 'form_accesorio' %}" class="dropdown-item">Crear Accesorios</a></li>
-                  <li><a href="{% url 'MostrarCliente' %}" class="dropdown-item">Mostrar Info Clientes</a></li>
-                  <li><a href="{% url 'CrearCliente' %}" class="dropdown-item">Ingresar Cliente</a></li>
-                                  
-                
                 </ul>
               </li>
-            <li class="nav-item">
-              <a href="{%  url 'logout' %}" class="nav-link">Cerrar Sesión</a>
-            </li>
             </ul>
-                {%endif%}
           </div>
         </div>
       </nav>
+
+
+
+
+
+
+
     
-    
-    
+
+
+
+
+
+    {% load crispy_forms_tags %}
     <div class="container">
-        <h1>Mostrando Accesorios</h1>
+        <br><br><br>
+        <div class="row">
+            <div class="col-12 col-md-6 offset-md-3">
+                <div class="card">
+                    <div class="card-body">
+                        <h2>Ingresa tus credenciales </h2>
+                        <hr>
+                        <form action="#" method="post">
 
-        <table class="table">
-            <thead>
-                <tr>
-                    <th>IDProducto</th>
-                    <th>Clase</th>
-                    <th>Stock</th>
-                </tr>
-            </thead>
-            <tbody>
-            {% for ac in accesorios %}
-
-                <tr>
-                    <td>{{ ac.idProducto }}</td>
-                    <td>{{ ac.clase }}</td>
-                    <td>{{ ac.stock }}</td>
-                    <td>{{ ac.imagen }}</td>
-                    <td><a href="{% url 'form_modaccesorio' ac.idProducto %}">Modificar</a></td>
-                    <td><a href="{% url 'form_del_accesorio' ac.idProducto %}" class="btn btn-danger">Eliminar</a></td>
-                </tr>
-            {% endfor %}
-            </tbody>
-        </table>
-    </div>
-
-
-
-
-      <!-- F O O T E R -->
-
-      <footer class="w-100 d-flex align-items justify-content-center flex-wrap">
-        <p class="fs-5 px-3 pt-3">Petsy. (by Lucas Acevedo, Cesar Negrete) &copy; Copyright 2022 Todos los derechos
-          reservados</p>
-          <div id="iconos">
-            <a href="#"><i class="bi bi-facebook"></i></a>
-            <a href="#"><i class="bi bi-twitter"></i></a>
-            <a href="#"><i class="bi bi-instagram"></i></a>
- 
-          </div>
- 
-      </footer>
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-
+                            {% csrf_token %}
+                            
+                            {{form | crispy}}
+                                                 
+                            
+                            <a href="{% url 'index' %}">Volver</a><br>
+                            <input type="submit" value="Ingresar" class="btn btn-success" style="float: right;">
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>   
 </body>
-  </html>
-
+</html>
