Entrega 3: Creando el backend
Entrega 3: Creando el backend

--- a/Experiencia2/petsy/templates/Feriados.html
+++ b/Experiencia2/petsy/templates/Feriados.html
@@ -119,13 +119,14 @@
 
 <br><br><br>
     <div class="container">
+    <div class="table-responsive">
         <h1>Valores De las divisas</h1>
         <br>
         <div id="caja">
             <button type="button" id="enviar">Mostrar Divisas</button>
         </div>
 
-        <table class="table" id="categorias">
+        <table class="table align-middle" id="categorias">
             <thead>
                 <tr>
                     <th scope="col">codigo</th>
@@ -144,7 +145,7 @@
 
 
     </div>
-
+    </div>
 <br><br><br>
 <!-- F O O T E R -->
 <div>
