--- a/Experiencia2/petsy/templates/Mostrarcliente.html
+++ b/Experiencia2/petsy/templates/Mostrarcliente.html
@@ -70,11 +70,11 @@
       </nav>
     
     
-    
     <div class="container">
+    <div class="table">
         <h1>Mostrando Cliente</h1>
 
-        <table class="table">
+        <table class="table align-middle">
             <thead>
                 <tr>
                     <th>Rut_Cliente</th>
@@ -98,7 +98,7 @@
             </tbody>
         </table>
     </div>
-
+  </div>
 
 
 
