--- a/Experiencia2/petsy/templates/mostrar.html
+++ b/Experiencia2/petsy/templates/mostrar.html
@@ -70,11 +70,11 @@
       </nav>
     
     
-    
     <div class="container">
+    <div class="table-responsive">
         <h1>Mostrando Accesorios</h1>
 
-        <table class="table">
+        <table class="table align-middle">
             <thead>
                 <tr>
                     <th>IDProducto</th>
@@ -97,6 +97,7 @@
             </tbody>
         </table>
     </div>
+  </div>
 
 
 
